# llm-eval-regression-gateway

./: .dockerignore  .env.example  .gitignore  Makefile  POST_CAPTION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  logging_config.py  main.py  metrics.py  schemas.py  service.py
data/: eval_cases.json
docs/: CASE_STUDY.md
docs/github-actions/: ci.yml
evals/: support_evalset.jsonl
infra/docker/: Dockerfile
infra/k8s/: deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
llm/: dataset.py  evaluator.py  providers.py  schemas.py
scripts/: run_eval.py
src/llm_eval_regression_gateway/: __init__.py  cli.py  demo_models.py  eval_loader.py  eval_types.py  evaluator.py  reporting.py
src/llm_eval_regression_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_cli.py  test_evaluator.py
