[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-regression-gateway"
version = "0.1.0"
description = "Deterministic LLM release gating service for regression checks."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nagadeepak Appalaneni" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
llm-eval-gateway = "llm_eval_regression_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
